--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,23 @@
+--- 
 abstract: Create objects that are handles to Classes
-author: 'Adam Kennedy <cpan@ali.as>, L<http://ali.as/>'
-build_requires:
+author: 
+  - Adam Kennedy <adamk@cpan.org>, L<http://ali.as/>
+build_requires: 
   File::Spec: 0.80
   Test::More: 0.47
 distribution_type: module
-generated_by: Module::Install version 0.62
+generated_by: Module::Install version 0.68
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Class-Handle
-no_index:
-  directory:
+no_index: 
+  directory: 
     - inc
     - t
-requires:
+requires: 
   Class::ISA: 0.31
   Class::Inspector: 1.12
   perl: 5.005
-version: 1.06
+version: 1.07
